--- a/templates/remote-services/remote-services-table.html
+++ b/templates/remote-services/remote-services-table.html
@@ -16,7 +16,7 @@
     <div class="col-xs-10 col-md-5">
       <div>
         <span class="glyphicon glyphicon-flash"></span>&nbsp;&nbsp;&nbsp;
-        <a href="/remote_services/{{remote_service.id}}" id="remote_service_{{remote_service.name}}" style="color: black;">{{remote_service.name}}</a>
+        {{remote_service.name}}
       </div>
     </div>
 
