--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -135,7 +135,7 @@
           </div>
           <div id="discussion-your-comment-tips">
 
-            <label for="discussion-attach-file"><span class="glyphicon glyphicon-paperclip" style="margin-right: 3px" data-toggle="tooltip" ></span> <span href="#" data-toggle="tooltip" title="Accepted file types are PDF(application/pdf), PNG(image/png), and JPG(image/jpg)">Attach a File</span></label>
+            <label for="discussion-attach-file"><span class="glyphicon glyphicon-paperclip" style="margin-right: 3px"></span> <span href="#" title="Accepted file types are PDF(application/pdf), PNG(image/png), and JPG(image/jpg)">Attach a File</span></label>
             <div style="display: none"><input name="value" type="file" id="discussion-attach-file" multiple onchange="attach_files(this.files)" /></div>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span>formatting:</span>
