adding some more extensions and their content types also the magic way to check for other file types that filetype does not support. Also in setting is not is bringing up warnings so using !=. Turns out some files will appear as zip files(ppt, xls).

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -135,7 +135,7 @@
           </div>
           <div id="discussion-your-comment-tips">
 
-            <label for="discussion-attach-file"><span class="glyphicon glyphicon-paperclip" style="margin-right: 3px"></span> <span href="#" title="Accepted file types are PDF(application/pdf), PNG(image/png), and JPG(image/jpg)">Attach a File</span></label>
+            <label for="discussion-attach-file"><span class="glyphicon glyphicon-paperclip" style="margin-right: 3px"></span> <span href="#" title="Accepted file types are: ZIP, PDF, PNG, JPG, DOC, DOCX, VSD, XLS, XLSX, CSV, PPT, PPTX ">Attach a File</span></label>
             <div style="display: none"><input name="value" type="file" id="discussion-attach-file" multiple onchange="attach_files(this.files)" /></div>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span>formatting:</span>
