--- a/mantech_branding/templates/org_groups/org_group.html
+++ b/mantech_branding/templates/org_groups/org_group.html
@@ -99,7 +99,7 @@ Welcome to GovReady Q - {{org.name}}
       <p>The owner of the group can manage group members.</p>
     </div>
     <div class="col-md-3">
-        <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgb(160, 210, 160);"></div>
+        <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgba(29, 46, 93, 1);"></div>
     </div>
     <div class="col-md-2"></div>
   </div>
