--- a/mantech_branding/templates/portfolios/detail.html
+++ b/mantech_branding/templates/portfolios/detail.html
@@ -119,7 +119,7 @@ Remove contextbar from top of page
             <p>The owners of the portfolio can manage portfolio members.</p>
           </div>
           <div class="col-md-3">
-            <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgb(160, 210, 160);"></div>
+            <div class="glyphicon glyphicon-folder-open" style="font-size: 8em; color: rgba(29, 46, 93, 1);"></div>
           </div>
           <div class="col-md-2"></div>
         </div>
