--- a/mantech_branding/templates/projects.html
+++ b/mantech_branding/templates/projects.html
@@ -88,7 +88,7 @@ Your Compliance Projects
 
   .luna-box div.glyphicon {
     font-size:3em;
-    color: rgb(160, 210, 160);
+    color: rgba(29, 46, 93, 1);
     margin:30px 0px 0px 40px;
   }
 
