--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -36,12 +36,12 @@
 }
 #discussion .avatar {
   border-radius: 10px;
-  border: 1px solid #CCC;
+  border: 1px solid #ffffff;
 }
 #discussion .comment .comment-meta {
   margin: -15px -15px 15px -15px;
   padding: 10px 15px;
-  border-bottom: 1px solid #EEE;
+  border-bottom: 1px solid #ffffff;
 }
 #discussion .comment .comment-commands {
   text-align: right;
@@ -69,7 +69,7 @@
 #discussion .comment .replies {
   margin: 15px -15px -15px -15px;
   padding: 0 15px;
-  border-top: 1px solid #EEE;
+  border-top: 1px solid #ffffff;
   font-size: 95%;
 }
   #discussion .comment .replies .reply {
