login styling fix by routing the login button to produce the login form in the homepage

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -84,7 +84,10 @@
           </li>
 
         {% elif LOGIN_ENABLED %}
-          <li><a href="{% url "account_login" %}">Log In</a></li>
+          <li><a><form name="form" method="post" action={% url 'homepage' %}>
+               {% csrf_token %}
+    <input type="submit" name="action" value="login"/>
+</form></a></li>
         {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
