base conditional should point to its own css files

--- a/mantech_branding/templates/base-conditional.html
+++ b/mantech_branding/templates/base-conditional.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="{% static "vendor/google-fonts.css" %}">
 {% endif %}
 {% if 'govready-q.css' in args %}
-        <link rel="stylesheet" href="{% static "css/mantech.css" %}">
+        <link rel="stylesheet" href="{% static "css/govready-q.css" %}">
 {% endif %}
 {% if 'bootstrap-theme.min.css' in args %}
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap-theme.min.css" %}">
