Need jquery-ui for autocomplete. Most of the work is in editor.html, views(get_control_elements, add_component_statement, search_component_statement), and accompanying urls.

--- a/templates/base.html
+++ b/templates/base.html
@@ -140,6 +140,7 @@
     </div>
 
     <script src="{% static "vendor/jquery.js" %}"></script>
+    <script src="{% static "vendor/jquery-ui.js" %}"></script>
     <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
     <script src="{% static "vendor/autosize.min.js" %}"> </script>
