--- a/templates/controls/compare.html
+++ b/templates/controls/compare.html
@@ -185,7 +185,7 @@ Remove contextbar from top of page
                       <div>
                         <form>
                           <div class="form-group">
-                            <label for="compoment">Component</label>
+                            <label for="component">Component</label>
                             <input type="text" class="form-control" id="component" placeholder="Name of component" value="{{control.name}}">
                           </div>
                           <div class="form-group">
@@ -226,7 +226,7 @@ Remove contextbar from top of page
                       <div>
                         <form>
                           <div class="form-group">
-                            <label for="compoment">Component</label>
+                            <label for="component">Component</label>
                             <input type="text" class="form-control" id="component" placeholder="Name of component" value="{{control.name}}">
                           </div>
                           <div class="form-group">
@@ -420,7 +420,7 @@ Remove contextbar from top of page
               <form id="smt_panel_num" class="smt_form">
                 <div class="form-group">
                   <input type="hidden" id="producer_element_id" name="producer_element_id" value="">
-                  <label for="compoment">Producer Component</label>
+                  <label for="component">Producer Component</label>
                   <input type="text" class="form-control" id="producer_element_name" name="producer_element_name" placeholder="Name of component"
                     onchange="$('#producer_element-panel_num-title').text($(this).val());">
                 </div>
